FIXED: Very large white space in product card and shoppping card
In this commit, I remove all the white space in the top of the Shopping cart and price card pages. This changes I made them in the file product-card.css by deleting the follow property:

body {
  height: 100%;
}

--- a/4-JQuery/4-proyecto/assets/css/product-card.css
+++ b/4-JQuery/4-proyecto/assets/css/product-card.css
@@ -1,12 +1,7 @@
-/* ----- Variables ----- */
-/* ----- Global ----- */
-* {
-  box-sizing: border-box;
-}
-html,
+/* html,
 body {
   height: 100%;
-}
+} */
 body {
   display: grid;
   grid-template-rows: 1fr;
